[package]

name = "iron"
version = "0.0.1"
authors = ["Tor Hveem <tor@hveem.no>"]

[[bin]]

name = "iron"

[dependencies.iron]

git = "https://github.com/iron/iron.git"

[dependencies.router]

git = "https://github.com/iron/router.git"

[dependencies.urlencoded]

version = "0.1.0"
git = "https://github.com/iron/urlencoded.git"

[dependencies.persistent]

git = "https://github.com/iron/persistent.git"

[dependencies.mysql]

git = "https://github.com/blackbeam/rust-mysql-simple.git"
# Disable SSL for mysql as it results in linking errors
default-features = false
